Fixed the instructions for API calls to the platform.

--- a/concepts/glossary.mdx
+++ b/concepts/glossary.mdx
@@ -188,10 +188,10 @@ Percentage of executions that completed successfully. Key health indicator.
 ## Integration Terms
 
 ### API Endpoint
-A URL where your deployed Project is accessible. Format: `https://api.triform.ai/v1/org/project`.
+A URL where your deployed Project is accessible. Format: `https://app.triform.ai/api/in/{project-id}/{flow-id}`.
 
 ### Bearer Token
-Authentication method where API key is sent in Authorization header: `Authorization: Bearer <key>`.
+Authentication method where API key is sent in Authorization header without the "Bearer" prefix: `Authorization: {api-key}`.
 
 ### CI/CD
 Continuous Integration/Continuous Deployment. Automated testing and deployment pipelines.
