--- a/roadmap/logs.mdx
+++ b/roadmap/logs.mdx
@@ -277,7 +277,7 @@ integrations:
   webhook:
     url: https://logs.example.com/ingest
     headers:
-      Authorization: "Bearer ${API_KEY}"
+      Authorization: "${API_KEY}"
     format: json
 ```
 
