--- a/support/overview.mdx
+++ b/support/overview.mdx
@@ -109,7 +109,7 @@ We're here to help you succeed with Triform. Whether you have questions, need te
 
 **Verify:**
 1. API key is correct and active
-2. Header format: `Authorization: Bearer YOUR_KEY`
+2. Header format: `Authorization: YOUR_KEY`
 3. Content-Type: `application/json`
 4. Payload matches input schema
 5. Not hitting rate limits
