updates, simplification, llm.txt

--- a/appendix/quick-reference.mdx
+++ b/appendix/quick-reference.mdx
@@ -27,14 +27,14 @@ description: "Compact cheat sheet for everyday Triform tasks"
 
 ## Properties Panel
 
-- Global → Variables: Project‑scoped configuration values.
-- Components → Definition: Intent, requirements, constraints.
+- Project Variables: Project-scoped configuration values
+- Components → Definition: Intent, requirements, constraints
 - Components → Content:
-  - Agents: Model, prompts, tools, advanced settings.
-  - Flows: Arrange and connect sub‑components.
-  - Actions: `Action.py`, `README`, `requirements.txt`.
-- Execute: Run with a JSON payload; project‑level API/Schedule exposure and API key management.
-- Input & Output: Define ports, types, defaults; toggle Parallel.
+  - Agents: Model, prompts, tools, advanced settings
+  - Flows: Arrange and connect sub-components
+  - Actions: `Action.py`, `README`, `requirements.txt`
+- Execute: Run with a JSON payload; project-level API/Schedule exposure and API key management
+- Input & Output: Define ports, types, defaults; toggle Parallel
 
 ## Executions
 
