--- a/changelog/index.mdx
+++ b/changelog/index.mdx
@@ -18,7 +18,7 @@ description: "Latest updates, features, and improvements to Triform"
 - Better error messages throughout the platform
 
 **Bug Fixes:**
-- Fixed: Global Variables not updating in real-time
+- Fixed: Project Variables not updating in real-time
 - Fixed: Webhook retry logic not respecting exponential backoff
 
 ### v2.7.5 — September 25, 2025
@@ -48,7 +48,7 @@ description: "Latest updates, features, and improvements to Triform"
 - Fixed: Parallel Flow execution sometimes deadlocking
 - Fixed: Agent token usage not tracked correctly
 - Fixed: Deployment rollback not reverting all changes
-- Fixed: Global Variables not substituting in nested objects
+- Fixed: Project Variables not substituting in nested objects
 
 ### v2.6.5 — September 5, 2025
 
@@ -78,7 +78,7 @@ description: "Latest updates, features, and improvements to Triform"
 - 🔐 **SSO Support** — SAML integration for Enterprise (beta)
 
 **Improvements:**
-- Agent system prompts can now reference Global Variables
+- Agent system prompts can now reference Project Variables
 - Execution replay with modified payloads
 - Better webhook debugging tools
 - Organization member management UI refresh
