--- a/getting-started/workspace-overview.mdx
+++ b/getting-started/workspace-overview.mdx
@@ -1,31 +1,25 @@
 ---
-title: "First Launch & Layout Overview"
-description: "Orient yourself: Top Bar, Canvas, Chat, Properties"
+title: "Workspace Overview"
+description: "Navigate the interface: Top Bar, Canvas, Chat, Properties"
 ---
 
-## The workspace at a glance
+## The workspace
 
-- Top Bar — breadcrumbs, home, profile, deploy.
-- Canvas — where you build and debug visually.
-- Chat Panel (Triton) — conversational control and status.
-- Properties Panel — configuration, inputs, execution.
+**Top Bar** — Navigation, breadcrumbs, and deploy  
+**Canvas** — Visual workspace where you build  
+**Chat Panel** — Triton, your AI assistant  
+**Properties Panel** — Configuration, inputs, and execution
 
-## Your first choices
+## Basic interactions
 
-- Create a Project or Create an Agent on the Canvas.
-- Or open existing Flows/Actions/Agents to explore structure.
+**Click** — Select a node  
+**Double-click** — Open a node (Project/Flow/Agent)  
+**Right-click** — Context menus
 
-## Orientation tips
+## Quick start
 
-- Click to select a Node.
-- Double‑click any Node to open it (Project/Agent/Flow).
-- Right‑click for context menus (on Canvas or Node).
+1. Create a Project or Flow on the Canvas
+2. Or ask Triton to build something for you
+3. Execute with a test payload from Properties → Execute
 
-## What’s next
-
-- Learn the Top Bar for navigation and deploys.
-- Master the Canvas to construct systems.
-- Use the Properties Panel to execute with payloads.
-- Ask Triton to automate routine setup.
-
-> tip: A simple first build — Create a Flow with: Input → Action (returns a message) → Output. Execute it with a small JSON payload to verify your end‑to‑end loop.
+> tip: Try building a Flow with Input → Action (returns a message) → Output. Execute it with a simple JSON payload to verify your setup.
