--- a/index.mdx
+++ b/index.mdx
@@ -1,42 +1,42 @@
 ---
 title: "Welcome"
-description: "Triform overview and two‑minute quickstart"
+description: "Triform overview and quickstart"
 ---
 
-Triform is a visual platform for building, running, and monitoring AI‑powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** as Nodes (Agents, Flows, Actions) and connect them with Edges.
+Triform is a visual platform for building, running, and monitoring AI-powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** as Nodes (Agents, Flows, Actions) and connect them with Edges.
 
-## Who this guide is for
+## Who this is for
 
-- Engineers building end‑to‑end AI workflows
+- Engineers building end-to-end AI workflows
 - Product teams iterating quickly on prototypes
-- Non‑technical collaborators reviewing and testing behavior
+- Non-technical collaborators reviewing and testing behavior
 
-## Two‑minute Quickstart
+## Quickstart
 
-1. **Sign in** at `app.triform.ai` with Discord or GitHub.
-2. You land in your first **Project** with the **Canvas** open.
-3. **Chat** with Triton and ask him to build something.
-4. **Watch** Triton plan, build and test your solution.
-5. **Execute** it from the **Properties → Execute** panel.
+1. **Sign in** at [app.triform.ai](https://app.triform.ai) with Discord or GitHub
+2. You land in your first **Project** with the **Canvas** open
+3. **Chat** with Triton and ask him to build something
+4. **Watch** Triton plan, build, and test your solution
+5. **Execute** it from the **Properties → Execute** panel
 
-!!! tip "Fastest first success" Start with a Flow: _Build me a news gatherer that collects news from 15 different Swedish sources and summarizes them_. Use the Execute panel to run a small JSON payload.
+> tip: Start with a Flow: _"Build me a news gatherer that collects news from Swedish sources and summarizes them"_. Execute with a test payload to verify your setup.
 
 ## What you can build
 
-- Tool‑using **Agents** that call Actions/Flows
-- **Flows** that orchestrate multi‑step logic
-- **Actions** that run precise pieces of Python
-- APIs or scheduled jobs that expose top‑level components
+- Tool-using **Agents** that call Actions/Flows
+- **Flows** that orchestrate multi-step logic
+- **Actions** that run precise Python code
+- APIs or scheduled jobs that expose top-level components
 
 ## How Triform is organized
 
-- **Organizations** → top‑level ownership & access
-- **Projects** → focused workspaces inside an Organization
-- **Library** → reusable building blocks (Actions, Flows, etc.)
-- **Canvas** → the visual surface where you design and debug
+**Organizations** — Top-level ownership and access  
+**Projects** — Focused workspaces inside an Organization  
+**Library** — Reusable building blocks (Actions, Flows, etc.)  
+**Canvas** — The visual surface where you design and debug
 
 ## Need help?
 
-- Use the Chat Panel (Triton) to create, connect, or run components conversationally.
-- Invite teammates from Profile → Organization → View.
-- Share feedback any time—your input shapes our roadmap.
+- Use the Chat Panel (Triton) to create, connect, or run components
+- Invite teammates from Profile → Organization → View
+- Share feedback anytime—your input shapes our roadmap
