--- a/triton/building.mdx
+++ b/triton/building.mdx
@@ -60,7 +60,7 @@ def fetch_data(url: str, headers: Dict[str, str] = None) -> Dict[str, Any]:
 
 ### Action with specific requirements
 
-**You:** _"Create an Action that validates email addresses using a regex and checks against our blocklist in Global Variables"_
+**You:** _"Create an Action that validates email addresses using a regex and checks against our blocklist in Project Variables"_
 
 **Triton:**
 - Generates regex pattern
