--- a/triton/overview.mdx
+++ b/triton/overview.mdx
@@ -36,7 +36,7 @@ Triton lives in the **Chat Panel** at the bottom of your workspace. Click the ch
 
 ### Answer questions
 
-- **Explain concepts** — _"How do Global Variables work?"_
+- **Explain concepts** — _"How do Project Variables work?"_
 - **Provide guidance** — _"What's the best way to structure a multi-step workflow?"_
 - **Review code** — _"Is this Action following best practices?"_
 - **Suggest improvements** — _"How can I improve this Agent's prompt?"_
