--- a/tutorials/build-a-new-project.mdx
+++ b/tutorials/build-a-new-project.mdx
@@ -118,7 +118,7 @@ If something goes wrong:
 - Ask Triton: _"Why did the execution fail?"_
 
 Common issues:
-- API authentication missing → Add API keys to Global Variables
+- API authentication missing → Add API keys to Project Variables
 - Timeout errors → Adjust Action timeout settings
 - Empty results → Verify API endpoints are accessible
 
