--- a/tutorials/edit-a-specific-component.mdx
+++ b/tutorials/edit-a-specific-component.mdx
@@ -319,7 +319,7 @@ Track changes to components:
 **Diagnosis:** Environment differences
 
 **Solutions:**
-- Check Global Variables are set in production
+- Check Project Variables are set in production
 - Verify API keys and credentials
 - Review rate limits and quotas
 - Check for hardcoded values (don't do this!)
