--- a/getting-started/login.mdx
+++ b/getting-started/login.mdx
@@ -1,37 +1,28 @@
 ---
 title: "Login & Registration"
-description: "Sign in with Email, Discord or GitHub and session basics"
+description: "Sign in with Email, Discord, or GitHub"
 ---
 
 ## Sign in
 
-1. Go to **app.triform.ai**.
-2. Choose **Email**, **Discord** or **GitHub**.
-3. Approve OAuth and you’ll be redirected to your Canvas.
+1. Go to [app.triform.ai](https://app.triform.ai)
+2. Choose **Email**, **Discord**, or **GitHub**
+3. Authorize and you'll be redirected to your Canvas
 
-## First‑time registration
+## First-time registration
 
-- A personal Organization is created automatically.
-- A default Project is provisioned and opened.
+- A personal Organization is created automatically
+- A default Project opens on the Canvas
 
-## Re‑authentication & logout
+## Switching Organizations
 
-- If your session expires or OAuth access is revoked, you’ll be prompted to sign in again.
-- Logout terminates active tokens and clears your browser session.
-
-## Permissions & identity
-
-- Your display name comes from the provider (editable later).
-- Email is used for invitations and notifications.
-- You may connect GitHub to publish components (when enabled).
-
-> note: Multiple Organizations — You can belong to multiple Organizations. Switch via Profile → Organization.
+You can belong to multiple Organizations. Switch via Profile → Organization.
 
 ## Troubleshooting
 
-- Popup blocked: allow popups for `app.triform.ai`.
-- Wrong account: sign out of the provider, then sign in with the intended account.
-- Stuck redirect: clear cookies for `app.triform.ai` or try a private window.
-- 2FA issues: resolve with the provider, then repeat OAuth.
+**Popup blocked** — Allow popups for `app.triform.ai`  
+**Wrong account** — Sign out of your provider, then sign in again  
+**Stuck redirect** — Clear cookies for `app.triform.ai` or use a private window  
+**2FA issues** — Resolve with your provider, then repeat OAuth
 
-If problems persist, contact your Org Owner or reach us via the community channel.
+If problems persist, contact support via [Discord](https://discord.gg/triform).
