--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -10,79 +10,36 @@ description: "Get up and running with Triform in 5 minutes"
 
 ## Step 1: Sign in
 
-1. Navigate to [app.triform.ai](https://app.triform.ai)
+1. Go to [app.triform.ai](https://app.triform.ai)
 2. Click **Sign in with Discord** or **Sign in with GitHub**
-3. Authorize Triform to access your account
-4. You'll be redirected to your workspace
+3. Authorize Triform
+4. You'll land in your workspace
 
-## Step 2: Explore your workspace
-
-When you first log in, you'll see:
-
-- **Top Bar** — Navigation, breadcrumbs, and deploy controls
-- **Canvas** — The visual workspace where you build
-- **Chat Panel** — Triton, your AI assistant
-- **Properties Panel** — Configuration and execution controls
-
-## Step 3: Create your first Flow
+## Step 2: Create your first Flow
 
 Let's build a simple workflow using Triton:
 
 1. Click in the **Chat Panel** at the bottom
-2. Type: _"Build me a Flow that gives me a summary of the latest news from HackerNews"_
-3. Watch as Triton:
-   - Plans the structure
-   - Creates the necessary components
-   - Connects them together
+2. Type: _"Build me a Flow that summarizes the latest news from HackerNews"_
+3. Watch Triton plan, create, and connect the components
 
-## Step 4: Execute your Flow
+## Step 3: Execute your Flow
 
 1. Select the Flow node on the Canvas
 2. Open the **Properties Panel** on the right
-3. Navigate to the **Execute** tab
-4. Enter a test payload:
-   ```json
-   {
-     "text": "hello world"
-   }
-   ```
-5. Click **Execute**
-6. View the results in the output panel
-
-## Step 5: Explore further
-
-Now that you've created and executed your first Flow, try:
-
-- **Modifying the Flow** — Add more Actions or Agents
-- **Creating an Agent** — Ask Triton to build a tool-using Agent
-- **Viewing Executions** — Check the execution history for your Flow
-- **Deploying** — Make your Flow accessible via API
+3. Go to the **Execute** tab
+4. Click **Execute**
+5. View the results in the output panel
 
 ## Next steps
 
-Explore the documentation to learn more about:
-- The Workspace interface
-- Core Concepts like Projects, Agents, Flows, and Actions
-- Building your first Project
-- Using Triton, the AI assistant
-
-## Common first-time questions
-
-**Q: Can I invite teammates?**  
-Yes! Go to Profile → Organization → Members to invite collaborators.
-
-**Q: How do I save my work?**  
-Everything auto-saves. Your Projects, Flows, Agents, and Actions are persisted automatically.
-
-**Q: What languages are supported?**  
-Actions use Python. Agents can interact with any API or service through Actions.
-
-**Q: Is there a free tier?**  
-Yes! Check our quotas documentation for details on free and paid tiers.
+- **Modify** — Ask Triton to add more Actions or Agents
+- **Deploy** — Make your Flow accessible via API
+- **Explore** — Check execution history and logs
 
 ## Need help?
 
 - Ask Triton directly in the Chat Panel
 - Join our [Discord community](https://discord.gg/triform)
-- Contact support for technical issues
+- See the [Workspace Overview](/getting-started/workspace-overview) for interface details
 
