--- a/triton/defining.mdx
+++ b/triton/defining.mdx
@@ -143,7 +143,7 @@ Clarify what external resources you'll need:
 
 **Triton notes:**
 - Actions will need `stripe` and `sendgrid` Python packages
-- Global Variables needed: `STRIPE_API_KEY`, `SENDGRID_API_KEY`
+- Project Variables needed: `STRIPE_API_KEY`, `SENDGRID_API_KEY`
 - Rate limits to consider: Stripe (100/sec), SendGrid (varies by plan)
 
 ### Data dependencies
