--- a/legal/community-terms.mdx
+++ b/legal/community-terms.mdx
@@ -9,7 +9,7 @@ description: Minimal terms for the free, public-by-default Triform Community Ver
 **Entity:** Triform AB, Götgatan 23, 116 46 Stockholm, Sweden  
 **Contact:** contact@triform.ai
 
-> **Summary (not a substitute for the terms):** Your **creations and source code are public**. Your **executions, inputs, and outputs are not shared**; Triform may use **de-identified** execution data to operate, improve, and train systems and models. Use **secret variables** for credentials or sensitive values. **All Community data is processed and stored on EU-sovereign infrastructure.**
+> **Summary (not a substitute for the terms):** Your **creations and source code are public**. Your **executions, inputs, and outputs are not shared**; Triform may use **de-identified** execution data to operate, improve, and train systems and models. Use **secret variables** for credentials or sensitive values.
 
 ## 1) Eligibility
 - You must be **16+** (or the age of digital consent in your country, if higher).  
@@ -24,10 +24,9 @@ description: Minimal terms for the free, public-by-default Triform Community Ver
 - **Public:** Your **Creations (source code and non-secret assets)** are **public by default** and visible to anyone.  
 - **Not shared publicly:** **Execution Data** and **Secret Data** are **not disclosed to the public** by Triform.
 
-## 4) Licenses for public Creations (code)
+## 4) MIT-Licenses for public Creations (code)
 - **License to the public:** By using the Community Version, you grant everyone a **worldwide, royalty-free, non-exclusive, irrevocable, perpetual license** to **use, copy, modify, create derivative works of, and distribute** your **public code/Creations**, including commercially, with **reasonable attribution** (your Triform handle + project URL).
 - **License to Triform:** You grant Triform a matching license to host, display, index, remix, and showcase your public Creations and to use them to operate and improve the service.
-- **Optional license file:** You may add a license file to your project. If you do, it must be an **OSI-approved open-source license**. If absent, the default license above applies.
 
 ## 5) Use of Execution Data for training (private to the public)
 - Triform may **process and use Execution Data** to operate, secure, evaluate, and **train/improve** our systems and models.  
@@ -40,20 +39,17 @@ description: Minimal terms for the free, public-by-default Triform Community Ver
 - Only include materials you have rights to share **publicly** in your Creations (e.g., your own code).  
 - Do not use Triform for illegal, infringing, abusive, or harmful activities, or to violate third-party API/model terms.
 
-## 7) Data residency (EU sovereignty)
-- Triform processes and stores Community data on **EU-sovereign infrastructure** under EU jurisdiction. We do **not** transfer Community data outside jurisdictions governed by EU law (except if legally required, in which case we will use appropriate safeguards).
-
-## 8) Moderation; reporting
+## 7) Moderation; reporting
 - We may remove content, restrict access, or take action where these terms or the law are violated.  
 - Report issues or request takedown at **report@triform.ai** (include project URL and reason).
 
-## 9) Service changes
+## 8) Service changes
 The Community Version is provided **as-is** without SLA. We may change or discontinue features. If we make **material changes** to these terms, we will notify you and update the effective date.
 
-## 10) Disclaimers; liability
+## 9) Disclaimers; liability
 THE SERVICE IS PROVIDED "AS IS" WITHOUT WARRANTIES. TO THE MAXIMUM EXTENT PERMITTED BY LAW, TRIFORM IS NOT LIABLE FOR INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY, OR PUNITIVE DAMAGES, OR LOST PROFITS/REVENUE/DATA/GOODWILL. DIRECT DAMAGES ARE LIMITED TO **€100**.
 
-## 11) Governing law; arbitration
+## 10) Governing law; arbitration
 These terms are governed by the laws of **Sweden**. Any disputes arising from these terms shall be resolved through **binding arbitration in Stockholm, Sweden** in accordance with the rules of the Arbitration Institute of the Stockholm Chamber of Commerce.
 
 ---
