--- a/index.mdx
+++ b/index.mdx
@@ -3,13 +3,13 @@ title: "Welcome"
 description: "Triform overview and quickstart"
 ---
 
-Triform is a visual platform for building, running, and monitoring AI-powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** as Nodes (Agents, Flows, Actions) and connect them with Edges.
+Triform is a visual platform for building, running, and monitoring AI-powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** by just chatting with it.
 
 ## Who this is for
 
-- Engineers building end-to-end AI workflows
-- Product teams iterating quickly on prototypes
-- Non-technical collaborators reviewing and testing behavior
+- Non-technical users wanting to automate their work or tasks
+- Engineers building complex end-to-end Agentic workflows
+- Product teams iterating quickly on automation prototypes
 
 ## Quickstart
 
@@ -17,7 +17,7 @@ Triform is a visual platform for building, running, and monitoring AI-powered sy
 2. You land in your first **Project** with the **Canvas** open
 3. **Chat** with Triton and ask him to build something
 4. **Watch** Triton plan, build, and test your solution
-5. **Execute** it from the **Properties → Execute** panel
+5. **Execute** it from the **Chat** panel
 
 > tip: Start with a Flow: _"Build me a news gatherer that collects news from Swedish sources and summarizes them"_. Execute with a test payload to verify your setup.
 
