--- a/index.mdx
+++ b/index.mdx
@@ -33,10 +33,11 @@ Triform is a visual platform for building, running, and monitoring AI-powered sy
 **Organizations** — Top-level ownership and access  
 **Projects** — Focused workspaces inside an Organization  
 **Library** — Reusable building blocks (Actions, Flows, etc.)  
-**Canvas** — The visual surface where you design and debug
+**Builder** — The visual surface where you design and debug
+**Chat** — The chat interface where you can use and share your creations
 
 ## Need help?
 
-- Use the Chat Panel (Triton) to create, connect, or run components
+- Use the Chat Panel in the Builder and talk to Triton to create, connect, or run components
 - Invite teammates from Profile → Organization → View
 - Share feedback anytime—your input shapes our roadmap
